PIM-9349: PIM-9349: Fix record list alignment when images are loading indefinitely

--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/grid/Grid.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/grid/Grid.less
@@ -327,6 +327,7 @@
     margin-top: 3px;
     margin-bottom: -3px;
     object-fit: contain;
+    overflow: hidden;
 
     &--withLayer {
       margin-top: 4px;
